# syclbits

./: LICENSE  README.md
Docker/: Dockerfile
src/: array_reduction.cxx  eulerdemo.cxx  info.cxx  padded_reduction.cxx
src/grayscalepng/: README.md  grayscalepng.cxx
src/reductionlibrary/: CMakeLists.txt  reductionlibrary.h  test_reductionlibrary.cxx
